--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@
     --txt-color: #444;
     --heart-color: rgb(252, 8, 231);
 }
+
+* {
+    box-sizing: border-box;
+}
+
 body{
     margin: 0;
     padding: 0;
@@ -16,11 +21,14 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow-x: hidden;
 }
 .container {
-    height: 100vh;
+    height: 100dvh;
     display: grid;
     place-items: center;
+    max-width: 100dvw;
+    overflow: hidden;
 }
 .container > .envelope-wrapper {
     background: var(--bg-envelope-color);
